@@ -22,7 +22,6 @@ define(function (require) {
         eventEmitter          = require("ethon/event_emitter"),
         renderAssistant       = require("ethon/render_assistant"),
         resourceAssistant     = require("ethon/resource_assistant"),
-        Map                   = require("ethon/map"),
         GUI                   = require("ethon/gui"),
         elapsedTime           = new Date(),
         lastUpdate            = new Date(),
@@ -38,16 +37,19 @@ define(function (require) {
      *
      * @method Game
      * @param {Object} canvas Canvas object where the game will be rendered.
+     * @param {Object} guiElement HTML element where the gui will be rendered.
      * @param {Number} width Canvas width
      * @param {Number} height Canvas height
      * @param {Object} options An options object used for configuration.
      */
-    Game = function (canvas, width, height, options) {
+    Game = function (canvas, guiElement, width, height, options) {
         options = options || { showFPS: false };
+
         renderAssistant.setCanvas(canvas, width, height);
 
         this.scenes = {};
         this.activeScene = null;
+        this.gui = new GUI(guiElement);
 
         this.assetsToLoad = 0;
         this.assetsLoaded = 0;
@@ -79,9 +81,10 @@ define(function (require) {
      */
     Game.prototype.addScene = function (name, scene) {
         this.scenes[name] = scene;
+        this.gui.addView(name);
 
         if (this.activeScene === null) {
-            this.activeScene = name;
+            this.setActiveScene(name);
         }
     };
 
@@ -90,7 +93,7 @@ define(function (require) {
      * @method addButton
      */
     Game.prototype.addButton = function (name, sceneId, buttonDesc) {
-        this.scenes[sceneId].addButton(name, buttonDesc);
+        this.gui.addElement(sceneId, new GUI.Button(name, buttonDesc).elem);
     };
 
     /**
@@ -128,7 +131,7 @@ define(function (require) {
      *
      * @method render
      */
-    Game.prototype.render = function (render) {
+    Game.prototype.render = function () {
         this.scenes[this.activeScene].render(renderAssistant);
 
         if (showFPS) {
@@ -166,19 +169,31 @@ define(function (require) {
      * @method setActiveScene
      * @param {String} scene Scene's identifier
      */
-    Game.prototype.setActiveScene = function (scene) {
+    Game.prototype.setActiveScene = function (sceneId) {
         this.trigger("exit_scene_" + this.activeScene);
-        this.activeScene = scene;
-        this.trigger("enter_scene_" + scene);
+        this.activeScene = sceneId;
+        this.gui.setActiveView(sceneId);
+        this.trigger("enter_scene_" + sceneId);
     };
 
+    /**
+     * TODO:
+     *
+     */
     Game.prototype.loadImage = function (id, content, loadedCallback) {
         this.assetsToLoad += 1;
         resourceAssistant.loadImage(id, content, proxy(this, function () {
             this.assetsLoaded += 1;
+            if (loadedCallback !== undefined) {
+                loadedCallback();
+            }
         }));
     };
 
+    /**
+     * TODO:
+     *
+     */
     Game.prototype.loadText = function (id, content) {
         resourceAssistant.loadText(id, content);
     };
