@@ -1,3 +1,4 @@
+/*jslint browser: true, regexp: true*/
 /*global define*/
 
 /**
@@ -11,17 +12,19 @@
  * @requires renderAssistant
  * @requires actionDispatcher
  * @requires proxy
+ * @requires resourceAssistant
  */
 define(function (require) {
     "use strict";
 
-    var extend           = require("ethon/extend"),
-        inherit          = require("ethon/inherit"),
-        eventEmitter     = require("ethon/event_emitter"),
-        Soul             = require("ethon/soul"),
-        renderAssistant  = require("ethon/render_assistant"),
-        actionDispatcher = require("ethon/action_dispatcher"),
-        proxy            = require("ethon/proxy"),
+    var extend            = require("ethon/extend"),
+        inherit           = require("ethon/inherit"),
+        eventEmitter      = require("ethon/event_emitter"),
+        Soul              = require("ethon/soul"),
+        renderAssistant   = require("ethon/render_assistant"),
+        actionDispatcher  = require("ethon/action_dispatcher"),
+        proxy             = require("ethon/proxy"),
+        resourceAssistant = require("ethon/resource_assistant"),
         GUI;
 
     /**
@@ -29,9 +32,23 @@ define(function (require) {
      *
      * @method GUI
      */
-    GUI = function () {
-        this.elements = [];
-        this.visible = false;
+    GUI = function (container) {
+        this.container = container;
+        this.views = {};
+        this.activeView = null;
+    };
+
+    /**
+     * TODO:
+     */
+    GUI.prototype.addView = function (viewId) {
+        this.views[viewId] = document.createElement('div');
+        this.views[viewId].id = viewId;
+        this.views[viewId].style.width = this.container.clientWidth + "px";
+        this.views[viewId].style.height = this.container.clientHeight + "px";
+        this.views[viewId].style.position = "absolute";
+        this.views[viewId].style.visibility = "hidden";
+        this.container.appendChild(this.views[viewId]);
     };
 
     /**
@@ -39,40 +56,19 @@ define(function (require) {
      *
      * @method addElement
      */
-    GUI.prototype.addElement = function (element) {
-        element.parent = this;
-        this.elements.push(element);
+    GUI.prototype.addElement = function (viewId, element) {
+        this.views[viewId].appendChild(element);
     };
 
     /**
-     * Render GUI elements
-     *
-     * @method render
+     * TODO:
      */
-    GUI.prototype.render = function () {
-        var i, l;
-
-        for (i = 0, l = this.elements.length; i < l; i += 1) {
-            this.elements[i].render();
+    GUI.prototype.setActiveView = function (viewId) {
+        if (this.activeView !== null) {
+            this.views[this.activeView].style.visibility = "hidden";
         }
-    };
-
-    /**
-     * Set GUI as visible for handling events
-     *
-     * @method setVisible
-     */
-    GUI.prototype.setVisible = function (visible) {
-        this.visible = visible;
-    };
-
-    /**
-     * Check if GUI is visible
-     * 
-     * @method isVisible
-     */
-    GUI.prototype.isVisible = function () {
-        return this.visible;
+        this.activeView = viewId;
+        this.views[this.activeView].style.visibility = "visible";
     };
 
     /**
@@ -98,50 +94,42 @@ define(function (require) {
     };
 
     /**
-     * Constructor function for GUI Button.
-     *
-     * @method GUI.Button
-     * @param {String} name Button's identifier
-     * @param {Number} x Position on the x-axis
-     * @param {Number} y Position on the y-axis
-     * @param {Number} w Button's width
-     * @param {Number} h Button's height
-     * @param {String} text Button's text to display
-     * @param {Function} renderCallback Function for render button's background
+     * TODO:
      */
-    GUI.Button = function (name, x, y, w, h, text, image) {
-        Soul.call(this, name, x, y);
-        var position = this.getPosition();
+    GUI.Button = function (name, buttonDesc) {
+        var image = resourceAssistant.getImage(name),
+            openUrl = buttonDesc.action.match(/open\('(.*)'\)/);
 
-        this.w = w;
-        this.h = h;
-        this.text = text;
-        this.image = image;
+        this.elem = document.createElement('button');
 
-        actionDispatcher.registerMouseClickAction("MOUSE_LEFT",
-            { x: position.x, y: position.y, w: this.w, h: this.h }, proxy(this, this.click));
-    };
+        this.elem.style.position = "absolute";
+        this.elem.style.left = buttonDesc.x + "px";
+        this.elem.style.top = buttonDesc.y + "px";
+        this.elem.style.border = "0";
+        this.elem.style.padding = "0";
+        this.elem.style.cursor = "pointer";
 
-    inherit(GUI.Button, Soul);
-    extend(eventEmitter, GUI.Button.prototype);
-
-    GUI.Button.prototype.render = function () {
-        var position = this.getPosition();
-        if (this.image !== undefined) {
-            renderAssistant.drawImage(position.x, position.y, this.image);
+        if (buttonDesc.text !== undefined) {
+            this.elem.innerHTML = buttonDesc.text;
+        }
+        if (buttonDesc.image !== undefined) {
+            this.elem.style.background = "url(" + image.src + ") no-repeat";
+            this.elem.style.width = image.width + "px";
+            this.elem.style.height = image.height + "px";
         } else {
-            renderAssistant.drawQuad(position.x, position.y, this.w, this.h, "#000000");
+            this.elem.style.width = buttonDesc.width + "px";
+            this.elem.style.height = buttonDesc.height + "px";
         }
-        if (this.text !== "") {
-            renderAssistant.drawText(position.x, position.y + 30, this.text, { fillStyle: "#ffffff", font: "16px Arial" });
-        }
-    };
 
-    GUI.Button.prototype.click = function () {
-        if (this.parent.isVisible()) {
-            this.trigger(this.name + "_clicked");
-        }
+        this.elem.addEventListener("click", proxy(this, function () {
+            if (openUrl !== null) {
+                window.open(openUrl[1]);
+            } else {
+                this.trigger(buttonDesc.action);
+            }
+        }));
     };
+    extend(eventEmitter, GUI.Button.prototype);
 
     return GUI;
 });
