@@ -49,13 +49,6 @@ define(function (require) {
     };
 
     /**
-     *
-     */
-    Scene.prototype.addButton = function (name, buttonDesc) {
-        
-    };
-
-    /**
      * Update souls and check collisions between them.
      *
      * @method update
